--- a/index.html
+++ b/index.html
@@ -253,6 +253,10 @@
 						<div class="heading-block mx-auto text-center" style="max-width: 500px">
 							<h5 class="text-uppercase ls-1 text-muted mb-2">Gallery</h5>
 							<h2 class="text-transform-none mb-3">App Screenshots</h2>
+							<h2 class="text-transform-none mb-3">
+  <a href="https://play.google.com/store/apps/details?id=com.almas.iranfastvpn" target="_blank" style="text-decoration: none; color: inherit;">Iran VPN</a>
+</h2>
+
 							<p class="h6 fw-normal text-black-50">Here are some screenshots of the application, you could see before download, but be sure you will enjoy the speed.</p>
 						</div>
 
