--- a/index.html
+++ b/index.html
@@ -460,6 +460,7 @@
 						</div>
 
 						<div class="col-md-6 text-center text-md-end">
+							<a href="https://iranfastvpn.com" class="text-white-50">Iran VPN</a>
 							<a href="#" class="btn color bg-white rounded px-3 py-2 text-transform-none ls-0 shadow-sm"><i class="fa-brands fa-apple me-2"></i>App Store</a>
 							<a href="https://play.google.com/store/apps/details?id=com.almas.iranfastvpn" class="btn color bg-white rounded px-3 py-2 text-transform-none ls-0 shadow-sm ms-2"><i class="fa-brands fa-google-play me-2"></i>Play Store</a>
 						</div>
