--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
 
 					<div class="row col-mb-30">
 						<div class="col-md-6 text-center text-md-start">
-							Copyrights &copy; 2024 All Rights Reserved by Iran Fast VPN.<br>
+							Copyrights &copy; 2024 All Rights Reserved by <a href="https://iranfastvpn.com">Iran Fast VPN</a>.<br>
 							<div class="copyright-links"><a href="#" class="text-white-50">Terms of Use</a> / <a href="#" class="text-white-50">Privacy Policy</a></div>
 						</div>
 
